# xmmanager

./: .gitignore  .travis.yml  README.md  config.json  lib.py  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  xmmanager_config.json
.github/workflows/: macos-build.yml
