[build-system]
requires = ["setuptools>=61,<79", "wheel", "py2app>=0.27"]
build-backend = "setuptools.build_meta"

[project]
name = "xmmanager-mb"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "py2app>=0.28.10",
    "rumps>=0.4.0",
    "wheel>=0.47.0",
]

[tool.py2app]
script = "main.py"
argv_emulation = true
packages = ["rumps"]
includes = ["Cocoa"]
excludes = ["tkinter", "test"]

[tool.py2app.plist]
CFBundleName = "XMManager"
CFBundleShortVersionString = "0.1.0"
CFBundleIdentifier = "dev.numycode.xmmanager"
LSUIElement = true
