[metadata]
name = xmmanager-mb
version = 0.1.0

[options]
packages = find:
include-package-data = True

[tool:py2app]
script = main.py
app = XMManager
packages = rumps
includes = Cocoa, pkg_resources
excludes = tests
argv_emulation = True
resources =
plist = {
    "CFBundleName": "XMManager",
    "CFBundleShortVersionString": "0.1.0",
    "CFBundleIdentifier": "dev.numycode.xmmanager",
    "LSUIElement": True
}
